# mpgg

./: .flake8  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
mpgg/: __init__.py  mpgg.py  utilities.py
