[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'mpgg'
version = '1.0.0'
description = "Streamlined MPEG-1 and MPEG-2 source loader and helper utility for VapourSynth"
license = 'GPL-3.0-only'
authors = ['rlaphoenix <rlaphoenix@pm.me>']
readme = 'README.md'
homepage = 'https://github.com/rlaphoenix/mpgg'
repository = 'https://github.com/rlaphoenix/mpgg'
keywords = ['vapoursynth', 'dvd', 'mpeg', 'mpeg2']
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Other Environment',
    'Intended Audience :: End Users/Desktop',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Topic :: Multimedia :: Video',
]

[tool.poetry.dependencies]
python = "^3.8 || ^3.10"
pymp4 = "^1.2.0"
pyd2v = "^1.3.0"
vapoursynth = ">=50"
more-itertools = "^9.1.0"
pymediainfo = "^6.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "^3.2.1"
mypy = "^1.1.1"
isort = "^5.12.0"

[tool.isort]
line_length = 120

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
follow_imports = 'silent'
ignore_missing_imports = true
no_implicit_optional = true
